src/Palette.h

/* color definition */
typedef union
{
	struct
	{
		uint8_t b, g, r, a;
	};
	uint32_t value;
}
Color;
/* palette object */
struct Palette
{
	DEFINE_OBJECT;
	int entries;		/* number of colors */
	uint8_t data[0];	/* variable size Color array */
};